syntax = "proto3";
package partymap;

message Party {
  required string name = 1;
  required bytes key = 2;
  bytes secretKey = 3;
  string rules = 4;
  bytes metadata = 5;
}

message IntroduceFeeds {
  required string id = 1;
  bool return = 2;
  repeated bytes keys = 3;
}

message EphemeralMessage {
  string subject = 1;
  bytes data = 2;
}
